Adds more battery runtime and general features

--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
         "Battery Runtime Estimator",
         "Bolt Torque Calculator (VDI 2230)",
         "Beam Bending Calculator",
-        "Wire Sizing Calculator"
+        "Engineering Fits Assistant"
       ];
 
       let tools = [];
