Adds a shit ton of tools, the ones from gemini suck though

--- a/tools/fatigue-life-estimator/index.html
+++ b/tools/fatigue-life-estimator/index.html
@@ -975,7 +975,7 @@
                     </div>
                     <div class="input-group">
                         <label for="stress_uncertainty_pct">Stress Uncertainty (+/- %)</label>
-                        <input type="number" id="stress_uncertainty_pct" name="stress_uncertainty_pct" value="0" min="0" max="95" step="1">
+                        <input type="number" id="stress_uncertainty_pct" name="stress_uncertainty_pct" value="0" min="0" max="95" step="any">
                         <span class="tooltip-trigger" data-tooltip="Loading...">?</span>
                     </div>
 
@@ -1009,24 +1009,24 @@
                         <div class="input-row">
                             <div class="input-group">
                                 <label for="endurance_limit_ratio">Endurance Limit Ratio Se'/Sut</label>
-                                <input type="number" id="endurance_limit_ratio" name="endurance_limit_ratio" value="0.50" step="0.01" min="0.1" max="1.0">
+                                <input type="number" id="endurance_limit_ratio" name="endurance_limit_ratio" value="0.50" step="any" min="0" max="1.0">
                                 <span class="tooltip-trigger" data-tooltip="Loading...">?</span>
                             </div>
                             <div class="input-group">
                                 <label for="surface_factor">Surface Factor ks</label>
-                                <input type="number" id="surface_factor" name="surface_factor" value="1.00" step="0.01" min="0.5" max="1.2">
+                                <input type="number" id="surface_factor" name="surface_factor" value="1.00" step="any" min="0" max="1.2">
                                 <span class="tooltip-trigger" data-tooltip="Loading...">?</span>
                             </div>
                         </div>
                         <div class="input-row">
                             <div class="input-group">
                                 <label for="size_factor">Size Factor kd</label>
-                                <input type="number" id="size_factor" name="size_factor" value="1.00" step="0.01" min="0.5" max="1.2">
+                                <input type="number" id="size_factor" name="size_factor" value="1.00" step="any" min="0" max="1.2">
                                 <span class="tooltip-trigger" data-tooltip="Loading...">?</span>
                             </div>
                             <div class="input-group">
                                 <label for="reliability_factor">Reliability Factor kr</label>
-                                <input type="number" id="reliability_factor" name="reliability_factor" value="1.00" step="0.01" min="0.5" max="1.0">
+                                <input type="number" id="reliability_factor" name="reliability_factor" value="1.00" step="any" min="0" max="1.0">
                                 <span class="tooltip-trigger" data-tooltip="Loading...">?</span>
                             </div>
                         </div>
@@ -1035,12 +1035,12 @@
                         <div class="input-row">
                             <div class="input-group">
                                 <label for="fatigue_strength_coeff_ratio">Fatigue Strength Coefficient sigma_f'/Sut</label>
-                                <input type="number" id="fatigue_strength_coeff_ratio" name="fatigue_strength_coeff_ratio" value="1.50" step="0.01" min="0.5" max="3.0">
+                                <input type="number" id="fatigue_strength_coeff_ratio" name="fatigue_strength_coeff_ratio" value="1.50" step="any" min="0" max="3.0">
                                 <span class="tooltip-trigger" data-tooltip="Loading...">?</span>
                             </div>
                             <div class="input-group">
                                 <label for="fatigue_strength_exponent">Basquin Exponent b</label>
-                                <input type="number" id="fatigue_strength_exponent" name="fatigue_strength_exponent" value="-0.09" step="0.01">
+                                <input type="number" id="fatigue_strength_exponent" name="fatigue_strength_exponent" value="-0.09" step="any">
                                 <span class="tooltip-trigger" data-tooltip="Loading...">?</span>
                             </div>
                         </div>
@@ -1050,30 +1050,30 @@
                             <div class="input-row">
                                 <div class="input-group">
                                     <label for="temperature_c">Service Temperature (deg C)</label>
-                                    <input type="number" id="temperature_c" name="temperature_c" value="23" step="1">
+                                    <input type="number" id="temperature_c" name="temperature_c" value="23" step="any">
                                     <span class="tooltip-trigger" data-tooltip="Loading...">?</span>
                                 </div>
                                 <div class="input-group">
                                     <label for="load_frequency_hz">Load Frequency (Hz)</label>
-                                    <input type="number" id="load_frequency_hz" name="load_frequency_hz" value="2.0" step="0.1" min="0.01">
+                                    <input type="number" id="load_frequency_hz" name="load_frequency_hz" value="2.0" step="any" min="0.01">
                                     <span class="tooltip-trigger" data-tooltip="Loading...">?</span>
                                 </div>
                             </div>
                             <div class="input-row">
                                 <div class="input-group">
                                     <label for="moisture_derating_factor">Moisture Derating Factor</label>
-                                    <input type="number" id="moisture_derating_factor" name="moisture_derating_factor" value="1.00" step="0.01" min="0.2" max="1.2">
+                                    <input type="number" id="moisture_derating_factor" name="moisture_derating_factor" value="1.00" step="any" min="0.2" max="1.2">
                                     <span class="tooltip-trigger" data-tooltip="Loading...">?</span>
                                 </div>
                                 <div class="input-group">
                                     <label for="chemical_derating_factor">Chemical Derating Factor</label>
-                                    <input type="number" id="chemical_derating_factor" name="chemical_derating_factor" value="1.00" step="0.01" min="0.2" max="1.2">
+                                    <input type="number" id="chemical_derating_factor" name="chemical_derating_factor" value="1.00" step="any" min="0.2" max="1.2">
                                     <span class="tooltip-trigger" data-tooltip="Loading...">?</span>
                                 </div>
                             </div>
                             <div class="input-group">
                                 <label for="uv_derating_factor">UV/Weathering Derating Factor</label>
-                                <input type="number" id="uv_derating_factor" name="uv_derating_factor" value="1.00" step="0.01" min="0.2" max="1.2">
+                                <input type="number" id="uv_derating_factor" name="uv_derating_factor" value="1.00" step="any" min="0.2" max="1.2">
                                 <span class="tooltip-trigger" data-tooltip="Loading...">?</span>
                             </div>
                         </div>
@@ -1087,13 +1087,13 @@
                             </div>
                             <div class="input-group">
                                 <label for="required_fatigue_factor">Required Life Factor</label>
-                                <input type="number" id="required_fatigue_factor" name="required_fatigue_factor" value="1.50" step="0.1" min="1.0">
+                                <input type="number" id="required_fatigue_factor" name="required_fatigue_factor" value="1.50" step="any" min="1.0">
                                 <span class="tooltip-trigger" data-tooltip="Loading...">?</span>
                             </div>
                         </div>
                         <div class="input-group">
                             <label for="required_yield_factor">Required Yield Factor</label>
-                            <input type="number" id="required_yield_factor" name="required_yield_factor" value="1.20" step="0.1" min="1.0">
+                            <input type="number" id="required_yield_factor" name="required_yield_factor" value="1.20" step="any" min="1.0">
                             <span class="tooltip-trigger" data-tooltip="Loading...">?</span>
                         </div>
                     </div>
@@ -1916,7 +1916,7 @@
         // 0. GLOBAL STORE & CONFIG
         // =================================================================
         let toolDocumentation = {};
-        let pyUtils, pyToolModule;
+        let pyUtils, pyToolModule, pyFatigueCaller;
         let materialPresets = {};
         let lastResults = null;
         let lastContext = null;
@@ -1948,6 +1948,80 @@
             'chemical_derating_factor',
             'uv_derating_factor'
         ];
+        const FALLBACK_MATERIAL_PRESETS = {
+            metal: {
+                custom: {
+                    display_name: 'Custom Metal',
+                    supports_endurance_limit: true
+                },
+                steel_1045: {
+                    display_name: 'Steel 1045 (normalized)',
+                    ultimate_strength_mpa: 625.0,
+                    yield_strength_mpa: 530.0,
+                    endurance_limit_ratio: 0.50,
+                    fatigue_strength_coeff_ratio: 1.55,
+                    fatigue_strength_exponent: -0.090,
+                    surface_factor: 1.00,
+                    size_factor: 1.00,
+                    reliability_factor: 1.00,
+                    supports_endurance_limit: true
+                },
+                aluminum_6061_t6: {
+                    display_name: 'Aluminum 6061-T6',
+                    ultimate_strength_mpa: 310.0,
+                    yield_strength_mpa: 276.0,
+                    endurance_limit_ratio: 0.0,
+                    fatigue_strength_coeff_ratio: 1.45,
+                    fatigue_strength_exponent: -0.095,
+                    surface_factor: 1.00,
+                    size_factor: 1.00,
+                    reliability_factor: 1.00,
+                    supports_endurance_limit: false
+                }
+            },
+            polymer: {
+                custom: {
+                    display_name: 'Custom Polymer',
+                    supports_endurance_limit: false
+                },
+                abs: {
+                    display_name: 'ABS (injection molded)',
+                    ultimate_strength_mpa: 45.0,
+                    yield_strength_mpa: 40.0,
+                    endurance_limit_ratio: 0.0,
+                    fatigue_strength_coeff_ratio: 1.20,
+                    fatigue_strength_exponent: -0.105,
+                    surface_factor: 1.00,
+                    size_factor: 1.00,
+                    reliability_factor: 1.00,
+                    supports_endurance_limit: false
+                },
+                pc: {
+                    display_name: 'Polycarbonate (PC)',
+                    ultimate_strength_mpa: 67.0,
+                    yield_strength_mpa: 60.0,
+                    endurance_limit_ratio: 0.0,
+                    fatigue_strength_coeff_ratio: 1.25,
+                    fatigue_strength_exponent: -0.095,
+                    surface_factor: 1.00,
+                    size_factor: 1.00,
+                    reliability_factor: 1.00,
+                    supports_endurance_limit: false
+                },
+                pom: {
+                    display_name: 'Acetal / POM',
+                    ultimate_strength_mpa: 70.0,
+                    yield_strength_mpa: 65.0,
+                    endurance_limit_ratio: 0.0,
+                    fatigue_strength_coeff_ratio: 1.30,
+                    fatigue_strength_exponent: -0.090,
+                    surface_factor: 1.00,
+                    size_factor: 1.00,
+                    reliability_factor: 1.00,
+                    supports_endurance_limit: false
+                }
+            }
+        };
         const STORAGE_KEY = 'fatigue-life-estimator-settings';
 
         // Default settings
@@ -2393,18 +2467,43 @@
 
                     import utils
                     import ${TOOL_MODULE_NAME}
+                    import importlib
+                    import inspect
+                    import json
+                    importlib.reload(${TOOL_MODULE_NAME})
+
+                    def call_fatigue_tool(payload_json):
+                        payload = json.loads(payload_json)
+                        signature = inspect.signature(${TOOL_MODULE_NAME}.estimate_fatigue_life)
+                        accepted = {
+                            name: payload[name]
+                            for name in signature.parameters
+                            if name in payload
+                        }
+                        return ${TOOL_MODULE_NAME}.estimate_fatigue_life(**accepted)
                 `);
 
                 pyUtils = pyodide.globals.get('utils');
                 pyToolModule = pyodide.globals.get(TOOL_MODULE_NAME);
+                pyFatigueCaller = pyodide.globals.get('call_fatigue_tool');
 
                 // Load material presets directly from Python (single source of truth)
                 loadingText.textContent = 'Loading material presets...';
-                const presetProxy = pyToolModule.get_fatigue_material_presets();
-                materialPresets = toPlainObject(
-                    presetProxy.toJs({ dict_converter: Object.fromEntries })
-                );
-                presetProxy.destroy();
+                if (typeof pyToolModule.get_fatigue_material_presets === 'function') {
+                    const presetProxy = pyToolModule.get_fatigue_material_presets();
+                    materialPresets = toPlainObject(
+                        presetProxy.toJs({ dict_converter: Object.fromEntries })
+                    );
+                    presetProxy.destroy();
+                } else {
+                    console.warn('fatigue.py missing get_fatigue_material_presets(); using JS fallback presets.');
+                    materialPresets = FALLBACK_MATERIAL_PRESETS;
+                }
+
+                if (!materialPresets.metal || !materialPresets.polymer) {
+                    console.warn('Preset payload malformed; using JS fallback presets.');
+                    materialPresets = FALLBACK_MATERIAL_PRESETS;
+                }
 
                 bindMaterialControls();
 
@@ -2489,8 +2588,7 @@
                 const chemical_derating_factor = parseFloat(document.getElementById('chemical_derating_factor').value);
                 const uv_derating_factor = parseFloat(document.getElementById('uv_derating_factor').value);
 
-                // Call Python function
-                const resultProxy = pyToolModule.estimate_fatigue_life(
+                const payload = {
                     max_stress_mpa,
                     min_stress_mpa,
                     ultimate_strength_mpa,
@@ -2513,7 +2611,14 @@
                     chemical_derating_factor,
                     uv_derating_factor,
                     stress_uncertainty_pct
-                );
+                };
+
+                if (!pyFatigueCaller) {
+                    throw new Error('Fatigue tool bridge is unavailable.');
+                }
+
+                // Call Python function through keyword bridge for compatibility
+                const resultProxy = pyFatigueCaller(JSON.stringify(payload));
 
                 // Convert to JS object with proper nested dict handling
                 lastResults = toPlainObject(
