--- a/tools/simple_thermal/index.html
+++ b/tools/simple_thermal/index.html
@@ -83,8 +83,8 @@
 
         <div class="plate-dims">
           <h4>Plate Dimensions</h4>
-          <label for="length">Length (m):</label><input type="number" id="length" value="0.1" step="0.01" min="0.001"><br>
-          <label for="width">Width (m):</label><input type="number" id="width" value="0.1" step="0.01" min="0.001"><br>
+          <label for="length">Length (m):</label><input type="number" id="length" value="0.1" step="any" min="0.001"><br>
+          <label for="width">Width (m):</label><input type="number" id="width" value="0.1" step="any" min="0.001"><br>
           <label for="thickness">Thickness (m):</label><input type="number" id="thickness" value="0.01" step="0.001" min="0.001"><br>
         </div>
         <div class="cylinder-dims">
@@ -95,7 +95,7 @@
         <div class="heatsink-dims">
           <h4>Heatsink Dimensions</h4>
           <label for="baseLength">Base Length (flow dir) (m):</label><input type="number" id="baseLength" value="0.1" step="0.01" min="0.001"><br>
-          <label for="baseWidth">Base Width (m):</label><input type="number" id="baseWidth" value="0.08" step="0.01" min="0.001"><br>
+          <label for="baseWidth">Base Width (m):</label><input type="number" id="baseWidth" value="0.08" step="any" min="0.001"><br>
           <label for="baseThickness">Base Thickness (m):</label><input type="number" id="baseThickness" value="0.005" step="0.001" min="0.001"><br>
           <label for="finHeight">Fin Height (m):</label><input type="number" id="finHeight" value="0.03" step="0.001" min="0.001"><br>
           <label for="finThickness">Fin Thickness (m):</label><input type="number" id="finThickness" value="0.001" step="0.0001" min="0.0001"><br>
@@ -106,8 +106,8 @@
         <h3>Material Properties</h3>
         <label for="materialPreset">Preset:</label>
         <select id="materialPreset"><option value="custom">Custom...</option><option value="aluminum" selected>Aluminum</option><option value="steel">Steel</option><option value="copper">Copper</option><option value="stainless-steel">Stainless Steel</option></select><br>
-        <label for="thermalConductivity">Thermal Conductivity (W/m·K):</label><input type="number" id="thermalConductivity" value="237" step="1" min="0.01"><br>
-        <div class="transient-only"><label for="density">Density (kg/m³):</label><input type="number" id="density" value="2700" step="10" min="1"><br></div>
+        <label for="thermalConductivity">Thermal Conductivity (W/m·K):</label><input type="number" id="thermalConductivity" value="237" step="any" min="0.01"><br>
+        <div class="transient-only"><label for="density">Density (kg/m³):</label><input type="number" id="density" value="2700" step="any" min="1"><br></div>
         <div class="transient-only"><label for="specificHeat">Specific Heat (J/kg·K):</label><input type="number" id="specificHeat" value="900" step="10" min="1"><br></div>
         <label for="emissivity">Emissivity (0-1):</label><input type="number" id="emissivity" value="0.2" step="0.01" min="0.01" max="1"><br>
 
