--- a/tools/reynolds-number/index.html
+++ b/tools/reynolds-number/index.html
@@ -704,7 +704,7 @@
                         </div>
                         <div class="slider-input-row">
                             <input type="range" id="velocity-slider" min="0.001" max="10" step="0.01" value="1">
-                            <input type="number" id="velocity-input" min="0.0001" step="0.1" value="1">
+                            <input type="number" id="velocity-input" min="0.0001" step="any" value="1">
                         </div>
                         <div class="slider-bounds">
                             <span id="velocity-min">0.001</span>
@@ -722,7 +722,7 @@
                         </div>
                         <div class="slider-input-row">
                             <input type="range" id="length-slider" min="0.001" max="1" step="0.001" value="0.05">
-                            <input type="number" id="length-input" min="0.0001" step="0.01" value="0.05">
+                            <input type="number" id="length-input" min="0.0001" step="any" value="0.05">
                         </div>
                         <div class="slider-bounds">
                             <span id="length-min">0.001</span>
