more detail to fracture mechanics

--- a/tools/composite-fracture-analyzer/index.html
+++ b/tools/composite-fracture-analyzer/index.html
@@ -2728,10 +2728,17 @@
             document.getElementById('growth-grid').style.display = 'grid';
             document.getElementById('growth-chart-container').style.display = 'block';
 
-            document.getElementById('val-cycles').innerHTML = formatCycles(r.cycles_to_failure) + '<span class="unit">cycles</span>';
-            document.getElementById('val-inspection').innerHTML = formatCycles(r.inspection_interval_cycles) + '<span class="unit">cycles</span>';
+            const noCritical = r.critical_crack_reached === false;
+            if (noCritical) {
+                document.getElementById('val-cycles').innerHTML = '&infin; <span class="unit" style="color:var(--warning-color);">(K never reaches K_IC)</span>';
+                document.getElementById('val-inspection').innerHTML = 'N/A';
+                document.getElementById('val-life-fraction').innerHTML = '0 <span class="unit">%</span>';
+            } else {
+                document.getElementById('val-cycles').innerHTML = formatCycles(r.cycles_to_failure) + '<span class="unit">cycles</span>';
+                document.getElementById('val-inspection').innerHTML = formatCycles(r.inspection_interval_cycles) + '<span class="unit">cycles</span>';
+                document.getElementById('val-life-fraction').innerHTML = (lifeFrac * 100).toFixed(1) + '<span class="unit">%</span>';
+            }
             document.getElementById('val-growth-rate').innerHTML = r.crack_growth_rate_mm_per_cycle.toExponential(2);
-            document.getElementById('val-life-fraction').innerHTML = (lifeFrac * 100).toFixed(1) + '<span class="unit">%</span>';
             // Populate N_f derivation steps (Crack Growth tab)
             if (r.subst_nf_step_delta_sigma) document.getElementById('subst-nf-delta-sigma').innerHTML = '$$' + r.subst_nf_step_delta_sigma + '$$';
             if (r.subst_nf_step_delta_K) document.getElementById('subst-nf-delta-K').innerHTML = '$$' + r.subst_nf_step_delta_K + '$$';
